samples/_failures_safe/1761787469_2a2c29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2437606d.c: In function ‘main’:
./samples/SAFE/__tmp_2437606d.c:147:9: error: expected expression at end of input
  147 |         printf("Chunk %zu: ", i +
      |         ^~~~~~
./samples/SAFE/__tmp_2437606d.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2437606d.c:147:9: error: expected declaration or statement at end of input
